[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
serde = { version = "1.0.216", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] } # Mit Serde für Serialisierung
tera = "1.17"